# acme-mining

./: .clang-format  .clang-tidy  AcmeMinerSim.cpp  AcmeMinerTest.cpp  AcmeMinerUtils.cpp  AcmeMinerUtils.h  CMakeLists.txt  MineDefs.h  MineDispatchers.cpp  MineDispatchers.h  MineLogger.h  MineOverlord.cpp  MineOverlord.h  MineSite.cpp  MineSite.h  MineStation.cpp  MineStation.h  MineStationState.cpp  MineStationState.h  MineTimer.h  MineTimerTest.cpp  MineTruck.cpp  MineTruck.h  MineTruckStates.cpp  MineTruckStates.h  Norm Evangelista Avast.pptm  README.md  acme-config
docs/: 2024-08-23T17-53-27_MineTruck.xlsx  2024-08-23T17-53-27_StationVisits.xlsx  2024-08-23T18-23-23_MineTruck.xlsx  2024-08-23T18-23-23_StationVisits.xlsx  ACME Mining Simulation Notes.docx  Acme Mining Simulation.vsdx  CubeSat Numbers.xlsx  Norm Evangelista Avast.pptm  Radiometric Calibration.vsdx  ~$ME Mining Simulation Notes.docx
html/: AcmeMinerSim_8cpp.html  AcmeMinerSim_8cpp__incl.map  AcmeMinerSim_8cpp__incl.md5  AcmeMinerTest_8cpp.html  AcmeMinerTest_8cpp__incl.map  AcmeMinerTest_8cpp__incl.md5  AcmeMinerUtils_8cpp.html  AcmeMinerUtils_8cpp__incl.map  AcmeMinerUtils_8cpp__incl.md5  AcmeMinerUtils_8h_source.html  MineDefs_8h_source.html  MineDispatchers_8cpp.html  MineDispatchers_8cpp__incl.map  MineDispatchers_8cpp__incl.md5  MineDispatchers_8h_source.html  MineLogger_8h.html  MineLogger_8h__dep__incl.map  MineLogger_8h__dep__incl.md5  MineLogger_8h__incl.map  MineLogger_8h__incl.md5  MineLogger_8h_source.html  MineOverlord_8cpp.html  MineOverlord_8cpp__incl.map  MineOverlord_8cpp__incl.md5  (+169 more)
(+38 files in other folders)
